--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,1 +1,7 @@
-<script src="/scripts/app.js"></script>
+<div id ="loginPage">
+    <div id="loginContainer">
+        <h1>Enter name to start experience</h1>
+        <input id = "usernameInput" type = "text" placeholder="Enter username"></input>
+        <button id = "loginButton">Swag</button>
+    </div>
+</div>
