--- a/views/spiral.hbs
+++ b/views/spiral.hbs
@@ -1,1 +1,5 @@
+<script src="/scripts/audioLoader.js"></script>
+<script src="/scripts/OrbitControls.js"></script>
+<script src="/scripts/CanvasRenderer.js"></script>
+<script src="/scripts/Projector.js"></script>
 <script src="/scripts/spiral.js"></script>
