Moved store to firebase, etc.

--- a/views/spiral.hbs
+++ b/views/spiral.hbs
@@ -1,5 +1,9 @@
+<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+<script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
 <script src="/scripts/audioLoader.js"></script>
 <script src="/scripts/OrbitControls.js"></script>
 <script src="/scripts/CanvasRenderer.js"></script>
 <script src="/scripts/Projector.js"></script>
 <script src="/scripts/spiral.js"></script>
+<script src="/scripts/app.js"></script>
+<div class="viz-container" />
