--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -145,3 +145,17 @@ a, a:active, a:hover, a:visited{
   width: 100%;
   padding: 20px;
 }
+
+/* LS Styles */
+
+/*.viz-container {
+  position: absolute;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
+  align-content: flex-start;
+}*/
+
+.viz-container .viz {
+  position: absolute;
+}
