--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,9 @@
-<div id ="loginPage">
-    <div id="loginContainer">
-        <h1>Enter name to start experience</h1>
-        <input id = "usernameInput" type = "text" placeholder="Enter username"></input>
-        <button id = "loginButton">Swag</button>
-    </div>
-</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+<script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
+<script src="/scripts/audioLoader.js"></script>
+<script src="/scripts/OrbitControls.js"></script>
+<script src="/scripts/CanvasRenderer.js"></script>
+<script src="/scripts/Projector.js"></script>
+<script src="/scripts/spiral.js"></script>
+<script src="/scripts/app.js"></script>
+<div class="viz-container" />
