--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -9,6 +9,17 @@ body {
   color: white;
 }
 
+#image-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#image-container {
+  transform: scale(0.5);
+  opacity: 0.5;
+}
+
 canvas{
   width: 100vw;
   height: 100vh;
