--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,4 +6,7 @@
 <script src="/scripts/Projector.js"></script>
 <script src="/scripts/spiral.js"></script>
 <script src="/scripts/app.js"></script>
+<div id = "image-container">
+    <img src = "/images/asesio_logo.png" />
+</div>
 <div class="viz-container" />
